<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282C30"
    tools:context=".features.pizzaDetail.PizzaDetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/none"
        app:layout_constraintBottom_toTopOf="@id/viewButton"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideStart"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dimenOf16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideEnd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/none"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dimenOf16dp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewPizzaDetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimenOf450dp"
                android:background="@color/color_red_neon"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="30dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewPizzaNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimenOf24dp"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/white"
                android:textSize="@dimen/dimenOf24sp"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@id/imageViewPizzaDetail"
                tools:text="Pizza name" />

            <RatingBar
                android:id="@+id/ratingBarPizzaDetail"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressBackgroundTint="@color/white"
                android:progressTint="#FDC650"
                android:rating="3"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@id/textViewPizzaNameDetail" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewSizePizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimenOf24dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/label_choose_size_pizza"
                android:textColor="@color/white"
                android:textSize="@dimen/dimenOf18sp"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@id/ratingBarPizzaDetail"
                tools:text="Escolha o tamanho" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSizeP"
                android:layout_width="@dimen/dimenOf80dp"
                android:layout_height="@dimen/dimenOf46dp"
                android:layout_marginStart="@dimen/dimenOf16dp"
                android:layout_marginTop="@dimen/dimenOf16dp"
                android:background="@drawable/shape_button_corners_white"
                android:text="@string/size_p"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/buttonSizeM"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSizePizza" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSizeM"
                android:layout_width="@dimen/dimenOf80dp"
                android:layout_height="@dimen/dimenOf46dp"
                android:layout_marginStart="@dimen/dimenOf16dp"
                android:layout_marginTop="@dimen/dimenOf16dp"
                android:background="@drawable/shape_button_corners_white"
                android:text="@string/size_m"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/buttonSizeG"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonSizeP"
                app:layout_constraintTop_toBottomOf="@id/textViewSizePizza" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSizeG"
                android:layout_width="@dimen/dimenOf80dp"
                android:layout_height="@dimen/dimenOf46dp"
                android:layout_marginStart="@dimen/dimenOf16dp"
                android:layout_marginTop="@dimen/dimenOf16dp"
                android:background="@drawable/shape_button_corners_white"
                android:text="@string/size_g"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonSizeM"
                app:layout_constraintTop_toBottomOf="@id/textViewSizePizza" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewPizzaValueDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimenOf24dp"
                android:fontFamily="@font/roboto_black"
                android:textColor="@color/white"
                android:textSize="@dimen/dimenOf24sp"
                app:layout_constraintEnd_toEndOf="@id/guideEnd"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@id/buttonSizeM"
                tools:text="R$ 50,00" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <View
        android:id="@+id/viewButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimenOf80dp"
        android:background="@color/color_green_neon"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewBuyPizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="@string/label_button_buy_pizza"
        android:textColor="@color/white"
        android:textSize="@dimen/dimenOf24sp"
        app:layout_constraintBottom_toBottomOf="@id/viewButton"
        app:layout_constraintEnd_toEndOf="@id/viewButton"
        app:layout_constraintStart_toStartOf="@id/viewButton"
        app:layout_constraintTop_toTopOf="@id/viewButton"
        tools:text="Comprar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimenOf16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/dimenOf16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>